Created unit tests/ fixed them